fix(): Sidebar working on mobile

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -35,7 +35,9 @@ html[data-theme='dark'] {
   --token-background-color: #03060b;
 }
 
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -74,7 +76,6 @@ a {
   transition: opacity 0.2s ease-out;
 
   &:hover {
-    color: unset;
     text-decoration: none;
     opacity: 0.7;
   }
