--- a/src/theme/Navbar/styles.module.scss
+++ b/src/theme/Navbar/styles.module.scss
@@ -6,27 +6,100 @@
  */
 
 :root {
-  --ifm-navbar-background-color: var(--token-background-color);
-  --ifm-navbar-item-padding-horizontal: 0.875rem;
-  --ifm-navbar-padding-horizontal: 20px;
   --ifm-navbar-height: 3.5rem;
 }
 
 html[data-theme='light'] {
-  --navbar-underline-c-bg: var(--c-carbon-100);
-  --navbar-divider-c-bg: var(--c-indigo-40);
-  --ifm-navbar-link-hover-color: var( --ifm-navbar-link-color);
+  --navbar-item-icon-c: var(--c-indigo-60);
   --ifm-navbar-link-color: var(--c-indigo-80);
+  --ifm-navbar-link-hover-color: var(--ifm-navbar-link-color);
+  --navbar-link-active-c: var(--c-carbon-100);
 }
 
 html[data-theme='dark'] {
-  --navbar-underline-c-bg: #fff;
-  --navbar-divider-c-bg: var(--c-indigo-0);
-  --ifm-navbar-link-hover-color: var( --ifm-navbar-link-color)
-  --ifm-navbar-link-color: #fff;
+  --navbar-item-icon-c: var(--c-indigo-10);
+  --ifm-navbar-link-color: var(--c-indigo-10);
+  --ifm-navbar-link-hover-color: var(--ifm-navbar-link-color);
+  --navbar-link-active-c: var(--c-carbon-100);
 }
 
-@media screen and (max-width: 997px) {
+:global {
+  .navbar__inner {
+    // align-items: center;
+  }
+
+  .navbar__item {
+    font-size: 0.875rem;
+    line-height: 1.063rem;
+  }
+
+  .navbar__items {
+    flex: 1 0 auto;
+
+    &--left {
+      align-items: stretch;
+
+      .navbar__brand {
+        display: none;
+      }
+
+      .navbar__link {
+        display: flex;
+        align-items: center;
+
+        &--active {
+          position: relative;
+          font-weight: 500;
+
+          &::after {
+            background: currentColor;
+            position: absolute;
+            content: '';
+            height: 2px;
+            left: var(--ifm-navbar-item-padding-horizontal);
+            right: var(--ifm-navbar-item-padding-horizontal);
+            top: calc(100% + var(--ifm-navbar-padding-vertical) - 2px);
+          }
+
+          &:hover {
+            opacity: 1;
+          }
+        }
+      }
+    }
+
+    &--right {
+      flex-grow: 1;
+    }
+
+    &--custom {
+      flex-grow: 0;
+      align-items: center;
+
+      > a {
+        color: var(--navbar-item-icon-c);
+        display: flex;
+        align-items: center;
+
+        padding: 0.5rem;
+      }
+    }
+  }
+
+  .navbar__link--active {
+    color: var(--navbar-link-active-c);
+  }
+}
+
+@media (max-width: 997px) {
+  :global {
+    .navbar__items--left {
+      > *:not(.navbar__toggle) {
+        display: none;
+      }
+    }
+  }
+
   .displayOnlyInLargeViewport {
     display: none !important;
   }
@@ -38,55 +111,4 @@ html[data-theme='dark'] {
 
 .navbarHidden {
   transform: translate3d(0, calc(-100% - 2px), 0);
-}
-
-:global(.navbar__divider) {
-  width: 1px;
-  align-self: stretch;
-  background: var(--navbar-divider-c-bg);
-  margin: .125rem 1rem;
-
-}
-
-:global(.navbar__items--end) {
-  flex: 0 1 auto;
-
-  > a {
-    display: flex;
-    align-items: center;
-    padding: .5rem;
-    color: var(--c-indigo-60);
-  }
-}
-
-:global(.navbar__items--middle) {
-  flex: 1 1 auto;
-  justify-content:flex-end;
-}
-
-:global(.navbar__link):global(.navbar__link--active) {
-  position: relative;
-  font-weight: 500;
-
-  &::after {
-    content: '';
-    position: absolute;
-    left: var(--ifm-navbar-item-padding-horizontal);
-    right: var(--ifm-navbar-item-padding-horizontal);
-    top: calc(
-      100% + var(--ifm-navbar-padding-vertical) +
-        var(--ifm-navbar-item-padding-vertical) - 2px
-    );
-    height: 2px;
-
-    background: var(--navbar-underline-c-bg);
-  }
-}
-
-:global {
-  .navbar {
-    .navbar__inner {
-      align-items: center;
-    }
-  }
 }
